--- a/reddit-night-mode-supplement.user.styl
+++ b/reddit-night-mode-supplement.user.styl
@@ -1,13 +1,13 @@
 /* ==UserStyle==
 @name          Reddit Night Mode Supplement
-@version       0.0.5b
+@version       0.0.5
 @namespace     github.com/derek-shnosh/reddit-night-mode-supplement
 @description   Cleans up inline code and code blocks when using Reddits (new) Night Mode.
 @author        derek-shnosh
 @license       MIT
 @homepageURL   https://github.com/derek-shnosh/reddit-night-mode-supplement
 @supportURL    https://github.com/derek-shnosh/reddit-night-mode-supplement/issues
-@updateURL     https://raw.githubusercontent.com/derek-shnosh/reddit-night-mode-supplement/master/reddit-night-mode-supplement.user.styl
+@updateURL     https://github.com/derek-shnosh/reddit-night-mode-supplement/raw/master/reddit-night-mode-supplement.user.styl
 @preprocessor  stylus
 
 ==/UserStyle== */
