adjust background-color of selected message in message browser

--- a/reddit-night-mode-supplement.user.styl
+++ b/reddit-night-mode-supplement.user.styl
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name          Reddit Night Mode Supplement
-@version       0.0.5
+@version       0.0.6
 @namespace     github.com/derek-shnosh/reddit-night-mode-supplement
 @description   Cleans up inline code and code blocks when using Reddits (new) Night Mode.
 @author        derek-shnosh
@@ -56,4 +56,11 @@
 	.dVifWl, ._2ng_YqEhC3QLYqZyRIQ9qB {
 		color: rgb(215, 218, 220);
 	}
+    
+    /* selected message background color
+	- background color is changed to darker shade.
+	*/
+    .entry.res-selected, .entry.res-selected .md-container {
+    	background-color: #48484B !important;
+    }
 }
